hphp/hack/test/typecheck/new_inference/eager_solve/array_get_good.php.like_types.exp
File "array_get_good.php", line 28, characters 14-25:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 29, characters 14-24:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 30, characters 14-29:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 31, characters 14-30:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 32, characters 14-30:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 33, characters 15-27:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 34, characters 15-26:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 35, characters 15-28:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 36, characters 15-29:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 37, characters 15-29:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 38, characters 16-28:
Invalid argument (Typing[4110])
File "array_get_good.php", line 4, characters 29-30:
Some type constraint(s) are violated here
File "array_get_good.php", line 4, characters 29-30:
Tv is a constrained type parameter
File "array_get_good.php", line 10, characters 23-28:
Expected string
File "array_get_good.php", line 4, characters 29-30:
But got dynamic
File "array_get_good.php", line 62, characters 14-20:
Invalid argument (Typing[4110])
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 47, characters 9-12:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 64, characters 14-19:
Invalid argument (Typing[4110])
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 48, characters 7-10:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 70, characters 14-25:
Invalid argument (Typing[4110])
File "array_get_good.php", line 8, characters 21-24:
Expected bool
File "array_get_good.php", line 51, characters 13-16:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 72, characters 15-22:
Invalid argument (Typing[4110])
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 53, characters 16-20:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 74, characters 15-21:
Invalid argument (Typing[4110])
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 54, characters 15-19:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 78, characters 15-24:
Invalid argument (Typing[4110])
File "array_get_good.php", line 9, characters 22-26:
Expected float
File "array_get_good.php", line 56, characters 17-21:
But got dynamic because it is an unenforceable type
File "array_get_good.php", line 82, characters 16-23:
Invalid argument (Typing[4110])
File "array_get_good.php", line 10, characters 23-28:
Expected string
File "array_get_good.php", line 58, characters 10-15:
But got dynamic because it is an unenforceable type
